@@ -125,6 +125,11 @@ public:
     sbow->SetPC(new_value);
 
   }
+
+  void Remove()
+  {
+  }
+
 };
 
 //========================================================================
